docs/src/css/custom.css
/*
 * Copyright 2025 - 2026 Zigflow authors <https://github.com/mrsimonemms/zigflow/graphs/contributors>
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

.theme-announcement-bar {
  font-weight: 600;
  letter-spacing: 0.2px;
  border-bottom: 1px solid #c00524;
  padding-top: 6px;
  padding-bottom: 6px;
}

.theme-announcement-bar a {
  color: #ffd400;
  text-decoration: underline;
  text-underline-offset: 3px;
}

